Updated CMakeLists for GUI project, findITK before findVTK in order to avoid redundance. Also bin folders added to each project.

--- a/Exercices/GUI/C++/CMakeLists.txt
+++ b/Exercices/GUI/C++/CMakeLists.txt
@@ -8,21 +8,16 @@ PROJECT(GUI)
 # find package(libraryName /QUIET /REQUIRED) generate variables containing the library way
 # include(${VariableName}) 
 
+# Find ITK
+find_package(ITK REQUIRED)
+include(${ITK_USE_FILE})
 # Find VTK
-find_package(VTK 5.10 REQUIRED)
+find_package(VTK 5.10 REQUIRED NO_MODULE)
 include(${VTK_USE_FILE})
 
 # Find QT
 find_package(Qt4 REQUIRED)
 INCLUDE (${QT_USE_FILE})
-
-# Find ITK
-find_package(ITK REQUIRED)
-include(${ITK_USE_FILE})
-
-# Find ItkVtkGlue
-#find_package(ItkVtkGlue REQUIRED)
-#include(${ItkVtkGlue_USE_FILE})
 
 # MotherWindow.h generation
 QT4_WRAP_UI(UI_SOURCES MotherWindow.ui)
@@ -40,3 +35,4 @@ SET(Window_HEADERS DaughterWindow.h)
 ADD_EXECUTABLE(GUI ${MOC_SOURCES} ${UI_SOURCES} ${Window_SOURCES} ${Window_HEADERS})
 
 TARGET_LINK_LIBRARIES(GUI  ${QT_LIBRARIES} ${ITK_LIBRARIES} ${VTK_LIBRARIES} ${ItkVtkGlue_LIBRARIES} QVTK)
+
