--- a/Exercices/MedianFilter/CMakeLists.txt
+++ b/Exercices/MedianFilter/CMakeLists.txt
@@ -4,12 +4,9 @@ cmake_minimum_required(VERSION 2.8)
 # This project is designed to be built outside the Insight source tree.
 project(MedianFilter)
 
-# Find Slicer3
+# Find SlicerExecutionModel
 find_package(SlicerExecutionModel REQUIRED)
 include(${SlicerExecutionModel_USE_FILE})
-
-# Find GenerateCLP
-find_package(GenerateCLP REQUIRED)
 include(${GenerateCLP_USE_FILE})
  
 # Find ITK
@@ -17,9 +14,12 @@ find_package(ITK REQUIRED)
 include(${ITK_USE_FILE})
 
 set(MedianFilter_SOURCE MedianFilter.cxx)
-GENERATECLP(MedianFilter_SOURCE MedianFilter.xml) 
 
-add_executable(MedianFilter ${MedianFilter_SOURCE})
-
-target_link_libraries(MedianFilter ${ITK_LIBRARIES})
+SEMMacroBuildCLI(
+  NAME MedianFilter
+  EXECUTABLE_ONLY
+  TARGET_LIBRARIES ${ITK_LIBRARIES}
+  LINK_DIRECTORIES ${ITK_LIBRARY_DIRS}
+  INCLUDE_DIRECTORIES ${ITK_INCLUDE_DIR}
+  )
 
