--- a/Exercices/GUI/C++/CMakeLists.txt
+++ b/Exercices/GUI/C++/CMakeLists.txt
@@ -1,4 +1,4 @@
-# This is the root ITK CMakeList file: 
+# This is the root ITK CMakeList file:
 cmake_minimum_required(VERSION 2.6)
 
 # This project is designed to be built outside the Insight source tree.
@@ -6,11 +6,12 @@ PROJECT(GUI)
 
 ## Find Libraries ##
 # find package(libraryName /QUIET /REQUIRED) generate variables containing the library way
-# include(${VariableName}) 
+# include(${VariableName})
 
-# Find ITK
+# Find ITK (requires a version of ITK containing ITKVTKGlue)
 find_package(ITK REQUIRED)
 include(${ITK_USE_FILE})
+
 # Find VTK
 find_package(VTK 5.10 REQUIRED NO_MODULE)
 include(${VTK_USE_FILE})
@@ -18,6 +19,7 @@ include(${VTK_USE_FILE})
 # Find QT
 find_package(Qt4 REQUIRED)
 INCLUDE (${QT_USE_FILE})
+
 
 # MotherWindow.h generation
 QT4_WRAP_UI(UI_SOURCES MotherWindow.ui)
@@ -34,5 +36,6 @@ SET(Window_HEADERS DaughterWindow.h)
 # EXECUTABLE
 ADD_EXECUTABLE(GUI ${MOC_SOURCES} ${UI_SOURCES} ${Window_SOURCES} ${Window_HEADERS})
 
-TARGET_LINK_LIBRARIES(GUI  ${QT_LIBRARIES} ${ITK_LIBRARIES} ${VTK_LIBRARIES} ${ItkVtkGlue_LIBRARIES} QVTK)
+TARGET_LINK_LIBRARIES(GUI ${QT_LIBRARIES} ${ITK_LIBRARIES} ${VTK_LIBRARIES} ${ItkVtkGlue_LIBRARIES} QVTK)
+
 
