ENH: tests on input file and output file with several radii added.

--- a/Exercices/MedianFilter/CMakeLists.txt
+++ b/Exercices/MedianFilter/CMakeLists.txt
@@ -19,3 +19,11 @@ SEMMacroBuildCLI(
   TARGET_LIBRARIES ${ITK_LIBRARIES}
   )
 
+option(BUILD_TESTING "Build the testing tree" ON)
+
+IF(BUILD_TESTING)
+  include(CTest)
+  ADD_SUBDIRECTORY(Testing)
+ENDIF(BUILD_TESTING)
+
+
